--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,6 +8,8 @@ on:
       - '/.github/*'
   pull_request:
     branches: main
+    paths-ignore: 
+      - '/.github/*'
   schedule:
     - cron: 0 6 * * 0
   workflow_dispatch:
