--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -19,4 +19,4 @@ jobs:
       id: print-to-log
       uses: actions/hello-world-docker-action@main
       with:
-        who-to-greet: ${{ inputs:who-to-greet }}
+        who-to-greet: ${{ inputs.who-to-greet }}
