--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,6 +13,11 @@ on:
   schedule:
     - cron: 0 6 * * 0
   workflow_dispatch:
+    inputs:
+      enviroments:
+        description: 'Environment to deploy to'
+        type: enviroment
+        required: true
 jobs:
   build:
     runs-on: ubuntu-latest
