--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,7 +16,7 @@ on:
     inputs:
       enviroments:
         description: 'Environment to deploy to'
-        type: enviroment
+        type: environment
         required: true
 jobs:
   build:
