--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,7 +19,7 @@ on:
         type: environment
         required: true
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -28,4 +28,44 @@ jobs:
           echo ${{ github.event_name }}
           echo ${{ github.ref }}
           ls
-    
+  Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Test
+    steps:
+      - run: echo "Testing. . ."
+  Load-Test:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Load_Test
+    steps:
+      - run: |
+          echo "Testing. . ."
+          sleep 15
+
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+      - run: |
+          echo "Step 1 deploying. . ."
+          sleep 10
+      - run: |
+          echo "Step 2 deploying. . ."
+          sleep 10
+      - run: |
+          echo "Step 3 deploying. . ."
+          sleep 10
+      - run: |
+          echo "Step 4 deploying. . ."
+          sleep 10
+      - run: |
+          echo "Step 5 deploying. . ."
+          sleep 10
+      
