--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -48,9 +48,7 @@ jobs:
   Production:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
-    environment:
-      name: Production
-      url: https://writeabout.net
+    environment: Production
     if: github.event.inputs.environment == 'Production'
     steps:
       - run: |
