--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
     environment: Production
-    if: github.event.inputs.environment == 'Production'
+    if: github.event.inputs.enviroments == 'Production'
     steps:
       - run: |
           echo "Step 1 deploying. . ."
